--- a/13-Loading_and_Prepocessing_Data_with_TF.ipynb
+++ b/13-Loading_and_Prepocessing_Data_with_TF.ipynb
@@ -64,6 +64,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TFRecord Format and Compression\n",
+    "\n",
+    "The TFRecord format is TensorFlow's preferred way of efficiently storing and reading large amounts of data. It is a binary format consisting of records with length, CRC checksums, and actual data. Creating a TFRecord file is easy using `tf.io.TFRecordWriter`, and reading it can be done with `tf.data.TFRecordDataset`. Compression, especially for network loading, can be achieved using options like GZIP.\n",
+    "\n",
+    "```python\n",
+    "with tf.io.TFRecordWriter(\"my_data.tfrecord\") as f:\n",
+    "    f.write(b\"This is the first record\")\n",
+    "    f.write(b\"And this is the second record\")\n",
+    "\n",
+    "filepaths = [\"my_data.tfrecord\"]\n",
+    "dataset = tf.data.TFRecordDataset(filepaths)\n",
+    "for item in dataset:\n",
+    "    print(item)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Protocol Buffers (protobuf)\n",
+    "\n",
+    "TFRecord files often contain serialized protocol buffers (protobufs). Protobufs are a binary format developed by Google, now widely used, and can be defined using a simple language. TensorFlow provides protobuf definitions, like `tf.train.Example`, commonly used in TFRecord files.\n",
+    "\n",
+    "```python\n",
+    "from tensorflow.train import BytesList, FloatList, Int64List, Feature, Features, Example\n",
+    "\n",
+    "person_example = Example(\n",
+    "    features=Features(\n",
+    "        feature={\n",
+    "            \"name\": Feature(bytes_list=BytesList(value=[b\"Alice\"])),\n",
+    "            \"id\": Feature(int64_list=Int64List(value=[123])),\n",
+    "            \"emails\": Feature(bytes_list=BytesList(value=[b\"a@b.com\", b\"c@d.com\"]))\n",
+    "        }\n",
+    "    )\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading and Parsing Examples\n",
+    "\n",
+    "Loading and parsing serialized Examples from a TFRecord file is done using `tf.data.TFRecordDataset` and `tf.io.parse_single_example()`. Features are described using a dictionary, and parsing involves specifying the types and shapes of the features.\n",
+    "\n",
+    "```python\n",
+    "feature_description = {\n",
+    "    \"name\": tf.io.FixedLenFeature([], tf.string, default_value=\"\"),\n",
+    "    \"id\": tf.io.FixedLenFeature([], tf.int64, default_value=0),\n",
+    "    \"emails\": tf.io.VarLenFeature(tf.string),\n",
+    "}\n",
+    "\n",
+    "for serialized_example in tf.data.TFRecordDataset([\"my_contacts.tfrecord\"]):\n",
+    "    parsed_example = tf.io.parse_single_example(serialized_example, feature_description)\n",
+    "    # ... (processing the parsed example)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
