--- a/13-Loading_and_Prepocessing_Data_with_TF.ipynb
+++ b/13-Loading_and_Prepocessing_Data_with_TF.ipynb
@@ -125,6 +125,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SequenceExample for Lists of Lists\n",
+    "For more complex structures, like lists of lists, TensorFlow provides SequenceExample. It contains context features and feature lists, where each feature can be a list of byte strings, a list of 64-bit integers, or a list of floats.\n",
+    "\n",
+    "```python\n",
+    "from tensorflow.train import FeatureList, FeatureLists, SequenceExample\n",
+    "\n",
+    "sequence_example = SequenceExample(\n",
+    "    context=Features(feature={\"author\": Feature(bytes_list=BytesList(value=[b\"John\"]))}),\n",
+    "    feature_lists=FeatureLists(\n",
+    "        feature_list={\n",
+    "            \"content\": FeatureList(feature=[Feature(bytes_list=BytesList(value=[b\"word1\", b\"word2\"]))]),\n",
+    "            \"comments\": FeatureList(feature=[Feature(bytes_list=BytesList(value=[b\"comment1\", b\"comment2\"]))])\n",
+    "        }\n",
+    "    )\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
