--- a/13-Loading_and_Prepocessing_Data_with_TF.ipynb
+++ b/13-Loading_and_Prepocessing_Data_with_TF.ipynb
@@ -150,7 +150,14 @@
    "metadata": {},
    "source": [
     "# Efficient Data Handling\n",
-    "Efficiently handling data involves parsing serialized data using TensorFlow operations, such as tf.io.parse_single_example() or tf.io.parse_single_sequence_example(). For varying sequence lengths, converting feature lists to ragged tensors, like tf.RaggedTensor.from_sparse(), is beneficial."
+    "Efficiently handling data involves parsing serialized data using TensorFlow operations, such as tf.io.parse_single_example() or tf.io.parse_single_sequence_example(). For varying sequence lengths, converting feature lists to ragged tensors, like tf.RaggedTensor.from_sparse(), is beneficial.\n",
+    "\n",
+    "```python\n",
+    "parsed_context, parsed_feature_lists = tf.io.parse_single_sequence_example(\n",
+    "    serialized_sequence_example, context_feature_descriptions, sequence_feature_descriptions\n",
+    ")\n",
+    "\n",
+    "parsed_content = tf.RaggedTensor.from_sparse(parsed_feature_lists[\"content\"])\n"
    ]
   },
   {
@@ -158,26 +165,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#SETUP\n",
+    "\n",
+    "# Python ≥3.5 is required\n",
+    "import sys\n",
+    "assert sys.version_info >= (3, 5)\n",
+    "\n",
+    "# Is this notebook running on Colab or Kaggle?\n",
+    "IS_COLAB = \"google.colab\" in sys.modules\n",
+    "IS_KAGGLE = \"kaggle_secrets\" in sys.modules\n",
+    "\n",
+    "if IS_COLAB or IS_KAGGLE:\n",
+    "    %pip install -q -U tfx\n",
+    "    print(\"You can safely ignore the package incompatibility errors.\")\n",
+    "\n",
+    "# Scikit-Learn ≥0.20 is required\n",
+    "import sklearn\n",
+    "assert sklearn.__version__ >= \"0.20\"\n",
+    "\n",
+    "# TensorFlow ≥2.0 is required\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "assert tf.__version__ >= \"2.0\"\n",
+    "\n",
+    "# Common imports\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# to make this notebook's output stable across runs\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# To plot pretty figures\n",
+    "%matplotlib inline\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "mpl.rc('axes', labelsize=14)\n",
+    "mpl.rc('xtick', labelsize=12)\n",
+    "mpl.rc('ytick', labelsize=12)\n",
+    "\n",
+    "# Where to save the figures\n",
+    "PROJECT_ROOT_DIR = \".\"\n",
+    "CHAPTER_ID = \"data\"\n",
+    "IMAGES_PATH = os.path.join(PROJECT_ROOT_DIR, \"images\", CHAPTER_ID)\n",
+    "os.makedirs(IMAGES_PATH, exist_ok=True)\n",
+    "\n",
+    "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
+    "    path = os.path.join(IMAGES_PATH, fig_id + \".\" + fig_extension)\n",
+    "    print(\"Saving figure\", fig_id)\n",
+    "    if tight_layout:\n",
+    "        plt.tight_layout()\n",
+    "    plt.savefig(path, format=fig_extension, dpi=resolution)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "X = tf.range(10)\n",
+    "dataset = tf.data.Dataset.from_tensor_slices(X)\n",
+    "dataset"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mlflow",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
