--- a/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
+++ b/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
@@ -71,6 +71,124 @@
     "        plt.tight_layout()\n",
     "    plt.savefig(path, format=fig_extension, dpi=resolution)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Char-RNN\n",
+    "Splitting a sequence into batches of shuffled windows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "n_steps = 5\n",
+    "dataset = tf.data.Dataset.from_tensor_slices(tf.range(15))\n",
+    "dataset = dataset.window(n_steps, shift=2, drop_remainder=True)\n",
+    "dataset = dataset.flat_map(lambda window: window.batch(n_steps))\n",
+    "dataset = dataset.shuffle(10).map(lambda window: (window[:-1], window[1:]))\n",
+    "dataset = dataset.batch(3).prefetch(1)\n",
+    "for index, (X_batch, Y_batch) in enumerate(dataset):\n",
+    "    print(\"_\" * 20, \"Batch\", index, \"\\nX_batch\")\n",
+    "    print(X_batch.numpy())\n",
+    "    print(\"=\" * 5, \"\\nY_batch\")\n",
+    "    print(Y_batch.numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the Data and Preparing the Dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shakespeare_url = \"https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\"\n",
+    "filepath = keras.utils.get_file(\"shakespeare.txt\", shakespeare_url)\n",
+    "with open(filepath) as f:\n",
+    "    shakespeare_text = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(shakespeare_text[:148])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\".join(sorted(set(shakespeare_text.lower())))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = keras.preprocessing.text.Tokenizer(char_level=True)\n",
+    "tokenizer.fit_on_texts(shakespeare_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.sequences_to_texts([[20, 6, 9, 8, 3]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_id = len(tokenizer.word_index) # number of distinct characters\n",
+    "dataset_size = tokenizer.document_count # total number of characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[encoded] = np.array(tokenizer.texts_to_sequences([shakespeare_text])) - 1\n",
+    "train_size = dataset_size * 90 // 100\n",
+    "dataset = tf.data.Dataset.from_tensor_slices(encoded[:train_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_steps = 100\n",
+    "window_length = n_steps + 1 # target = input shifted 1 character ahead\n",
+    "dataset = dataset.window(window_length, shift=1, drop_remainder=True)"
+   ]
   }
  ],
  "metadata": {
