--- a/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
+++ b/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
@@ -189,6 +189,36 @@
     "window_length = n_steps + 1 # target = input shifted 1 character ahead\n",
     "dataset = dataset.window(window_length, shift=1, drop_remainder=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.flat_map(lambda window: window.batch(window_length))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
