--- a/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
+++ b/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
@@ -204,7 +204,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.random.seed(42)\n",
+    "tf.random.set_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "dataset = dataset.shuffle(10000).batch(batch_size)\n",
+    "dataset = dataset.map(lambda windows: (windows[:, :-1], windows[:, 1:]))"
+   ]
   },
   {
    "cell_type": "code",
