--- a/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
+++ b/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
@@ -225,14 +225,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = dataset.map(\n",
+    "    lambda X_batch, Y_batch: (tf.one_hot(X_batch, depth=max_id), Y_batch))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = dataset.prefetch(1)"
+   ]
   }
  ],
  "metadata": {
