--- a/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
+++ b/16_Natural_Language_Processing_with_RNNs_and_Attention.ipynb
@@ -238,6 +238,16 @@
    "source": [
     "dataset = dataset.prefetch(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for X_batch, Y_batch in dataset.take(1):\n",
+    "    print(X_batch.shape, Y_batch.shape)"
+   ]
   }
  ],
  "metadata": {
